Added deployment profiles

--- a/Evento.API/appsettings.json
+++ b/Evento.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=EventsDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:eventodb.database.windows.net,1433;Initial Catalog=EventoDB;Persist Security Info=False;User ID=eventoadmin;Password=P@55w0rd!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
