--- a/Evento.Web/appsettings.json
+++ b/Evento.Web/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BaseUrl": "https://localhost:7103/api",
+  "BaseUrl": "https://eventoapi20241011111057.azurewebsites.net/api",
   "AllowedHosts": "*"
 }
