--- a/Evento.API/appsettings.Development.json
+++ b/Evento.API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=EventoDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=EventoDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnectionProd": "Server=tcp:eventodb.database.windows.net,1433;Initial Catalog=EventoDB;Persist Security Info=False;User ID=eventoadmin;Password=P@55w0rd!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
